--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -4,6 +4,7 @@
 $body-bg-color: #FCFCFC;
 $primary-color: #F20909;
 $bg-alpha: rgba(74, 74, 75, 0.5);
+$bg-alpha-nav:rgba(255, 238, 236, 0.753);
 
 //Fonts
 $main-font: 'Open Sans', sans-serif;
