--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -11,9 +11,35 @@ $main-font: 'Open Sans', sans-serif;
 $title-font:'Dancing Script', cursive;
 
 //effects
-$blur:"-webkit-filter: blur(5px);
--moz-filter: blur(5px);
--o-filter: blur(5px);
--ms-filter: blur(5px);
-filter: blur(5px)";
+// $blur:(filter: blur(5px) / 
+//     -webkit-filter: blur(5px) /
+//     -moz-filter: blur(5px)/
+//     -o-filter: blur(5px) /
+//     -ms-filter: blur(5px)
+//     );
+
 $logo-shadow: 0px 5px 15px rgba(242,9,9,0.8);
+$main-transition: all 0.3s ease;
+
+// Mixins
+@mixin blur-effect($value){
+    -webkit-filter: blur($value);
+    -moz-filter: blur($value);
+    -o-filter: blur($value);
+    -ms-filter: blur($value);
+    filter: blur($value);
+}
+@mixin transition($property...) {
+    -webkit-transition: $property;
+       -moz-transition: $property;
+        -ms-transition: $property;
+         -o-transition: $property;
+            transition: $property;
+}
+@mixin transform($property...) {
+    -webkit-transform: $property;
+       -moz-transform: $property;
+        -ms-transform: $property;
+         -o-transform: $property;
+            transform: $property;
+}
