some twiks in page styling, fixed some grid problems, lightbox implemented but not complete

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,6 +5,7 @@ $body-bg-color: #FCFCFC;
 $primary-color: #F20909;
 $footer-color:#A2A2A4;
 $bg-alpha: rgba(74, 74, 75, 0.5);
+$light-box-alpha:rgba(54, 54, 54, 0.8);
 $bg-alpha-nav:rgba(255, 238, 236, 0.753);
 
 
