--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@ p{
 .hidden {
     display: none;
 }
+
 .wrapper {
     display: grid;
     grid-gap: 20px;
@@ -141,8 +142,8 @@ p{
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 .icon {
-  width: 12%;
-  padding-left: 10px;
+  width: 13%;
+  padding-left: 50%;
   transition: all 0.3s ease;
 }
 
@@ -162,7 +163,7 @@ p{
 //___________________________ Social Media Nav  
 .social-media-nav{
   position:absolute;
-  left:85%;
+  left:82%;
   top: 30%;
   li{
     list-style-type:none;
@@ -280,6 +281,7 @@ p{
 #meet-team {
   height: 100vh;
   margin-top: -20px;
+  margin-bottom: 20px;
   display: grid;
        grid-template-columns: 0.5fr 3fr 0.5fr;
        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
@@ -392,11 +394,50 @@ p{
   .logo{
      font-size: 3.5rem;
   }
-}
+  #about-us {
+    background: url('../images/about-bg-desktop.jpg');
+    grid-template-columns: 0.3fr 1fr 1fr 1fr;
+       grid-template-rows: 0.5fr 1fr 0.5fr;
 
+  }
+}
+// ______________________________LightBox
+.lightbox {
+    display:none;
+    // @include transition(width .5s,height .5s, top .5s, background-color .5s);
+    @include transition(all .5s ease);
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 10;
+    overflow: scroll;
+    top: 0;
+    background-color: $light-box-alpha;
+    img {
+      display: flex;
+      justify-self: center;
+      width:80%;
+      height: 80%;
+      margin-top:3%;
+      margin-left: 5%;
+      
+    }
+}
+.close-lightbox {
+	position: absolute;
+	margin-left: 20px;
+	top: 16px;
+	font-size: 1em;
+	color: $primary-color;
+	cursor: pointer;
+}
+.show-lightbox { display: block; }
+
+//  _____________________________________Footer
 .main-footer{
   background-color: $footer-color;
   display:grid;
+  grid-row: 6;
   grid-template-rows: 1fr 1fr;
   padding: 1.5em;
 }
