trying to make lightbox work

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,18 +1,16 @@
-
 // @import '';
 // main colors
 $body-bg-color: #FCFCFC;
 $primary-color: #F20909;
 $footer-color:#A2A2A4;
 $bg-alpha: rgba(74, 74, 75, 0.5);
-$light-box-alpha:rgba(54, 54, 54, 0.8);
+$light-box-alpha:rgba(54, 54, 54, 0.9);
 $bg-alpha-nav:rgba(255, 238, 236, 0.753);
-
-
 //Fonts
-$main-font: 'Open Sans', sans-serif;
-$title-font:'Dancing Script', cursive;
-
+$main-font: 'Open Sans',
+sans-serif;
+$title-font:'Dancing Script',
+cursive;
 //effects
 // $blur:(filter: blur(5px) / 
 //     -webkit-filter: blur(5px) /
@@ -20,38 +18,43 @@ $title-font:'Dancing Script', cursive;
 //     -o-filter: blur(5px) /
 //     -ms-filter: blur(5px)
 //     );
-
-$logo-shadow: 0px 5px 15px rgba(242,9,9,0.8);
+$logo-shadow: 0px 5px 15px rgba(242, 9, 9, 0.8);
 $main-transition: all 0.3s ease;
-
 // Mixins
-@mixin btn-gradient(){
+@mixin btn-gradient() {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f20909+0,bc1607+100 */
-    background: #f20909; /* Old browsers */
-    background: -moz-linear-gradient(top, #f20909 0%, #bc1607 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #f20909 0%,#bc1607 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #f20909 0%,#bc1607 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f20909', endColorstr='#bc1607',GradientType=0 ); /* IE6-9 */
+    background: #f20909;
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #f20909 0%, #bc1607 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #f20909 0%, #bc1607 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #f20909 0%, #bc1607 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f20909', endColorstr='#bc1607', GradientType=0);
+    /* IE6-9 */
 }
 
-@mixin blur-effect($value){
+@mixin blur-effect($value) {
     -webkit-filter: blur($value);
     -moz-filter: blur($value);
     -o-filter: blur($value);
     -ms-filter: blur($value);
     filter: blur($value);
 }
+
 @mixin transition($property...) {
     -webkit-transition: $property;
-       -moz-transition: $property;
-        -ms-transition: $property;
-         -o-transition: $property;
-            transition: $property;
+    -moz-transition: $property;
+    -ms-transition: $property;
+    -o-transition: $property;
+    transition: $property;
 }
+
 @mixin transform($property...) {
     -webkit-transform: $property;
-       -moz-transform: $property;
-        -ms-transform: $property;
-         -o-transform: $property;
-            transform: $property;
+    -moz-transform: $property;
+    -ms-transform: $property;
+    -o-transform: $property;
+    transform: $property;
 }
