--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 //Imports
-@import '_vars';
-@import '_lightbox';
+@import "_vars";
+@import "_lightbox";
 html {
     box-sizing: border-box;
 }
@@ -45,7 +45,7 @@ p {
 
 // ________________________________Landing Pg
 #bg-img {
-    background: url('../images/bg_mobile.jpg');
+    background: url("../images/bg_mobile.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -108,7 +108,7 @@ p {
     border-radius: 1px;
     z-index: 1;
     transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 }
 
 .line2 {
@@ -153,7 +153,7 @@ p {
     /* to stop flickering of text in safari */
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 
 .icon {
@@ -174,7 +174,7 @@ p {
 }
 
 //___________________________ Nav  styles end
-//___________________________ Social Media Nav  
+//___________________________ Social Media Nav
 .social-media-nav {
     position: absolute;
     left: 82%;
@@ -182,7 +182,7 @@ p {
     li {
         list-style-type: none;
         padding: 15px;
-        transition: .6s ease; // transition: background-color .3s ease;
+        transition: 0.6s ease; // transition: background-color .3s ease;
         color: $primary-color;
         position: relative;
         border-radius: 5px;
@@ -222,7 +222,7 @@ p {
 }
 
 .logo {
-    // padding-top: 50%; 
+    // padding-top: 50%;
     color: $primary-color;
     font-size: 2.5rem;
     text-shadow: $logo-shadow;
@@ -239,7 +239,7 @@ p {
 
 // _____________________________About Us Section
 #about-us {
-    background: url('../images/about-bg-mobile.jpg');
+    background: url("../images/about-bg-mobile.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -350,8 +350,8 @@ small {
     @include btn-gradient();
     color: white;
     white-space: nowrap;
-    box-shadow: 5px 5px 20px 5px transparentize(black, .85);
-    @include transition(background .3s,
+    box-shadow: 5px 5px 20px 5px transparentize(black, 0.85);
+    @include transition(background 0.3s,
     ease);
     &:hover {
         background: $primary-color;
@@ -394,10 +394,10 @@ small {
     grid-row: 5;
 }
 
-// _____________________________Media Queries 
+// _____________________________Media Queries
 @media screen and (min-width: 750px) {
     #bg-img {
-        background: url('../images/bg_desktop.jpg');
+        background: url("../images/bg_desktop.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -407,7 +407,11 @@ small {
         font-size: 3.5rem;
     }
     #about-us {
-        background: url('../images/about-bg-desktop.jpg');
+        background: url("../images/about-bg-desktop.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 100vh;
         grid-template-columns: 0.3fr 1fr 1fr 1fr;
         grid-template-rows: 0.5fr 1fr 0.5fr;
     }
@@ -440,37 +444,6 @@ small {
     }
 }
 
-// ______________________________LightBox
-// .lightbox {
-    //     display: none; // @include transition(width .5s,height .5s, top .5s, background-color .5s);
-    //     @include transition(all .5s ease);
-    //     position: fixed;
-    //     height: 100vh;
-    //     width: 100%;
-    //     z-index: 10;
-    //     overflow: scroll;
-    //     top: 0;
-    //     background-color: $light-box-alpha;
-    //     img {
-    //         display: flex;
-    //         justify-self: center;
-    //         width: 80%;
-    //         height: 80%;
-    //         margin-top: 3%;
-    //         margin-left: 5%;
-    //     }
-    // }
-    // .close-lightbox {
-    //     position: absolute;
-    //     right: 20px;
-    //     top: 16px;
-    //     font-size: 1em;
-    //     color: $primary-color;
-    //     cursor: pointer;
-    // }
-    // .show-lightbox {
-    //     display: block;
-    // }
 //  _____________________________________Footer
 .main-footer {
     background-color: $footer-color;
